update background formatting to fixed on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,12 @@ border-radius:10px;
 border: 2px orange;
 box-shadow: 2px 2px 4px rgb(255, 251, 0), -2px -2px 4px rgb(255, 251, 0);;
 overflow: hidden;
-background-color: #343a40;
+background: url("../images/thetop.jpg");
+background-size: cover;
+background-attachment: fixed;
+background-repeat: no-repeat;
+background-position: center center;
+
 }
 
 .sub-head{
@@ -21,10 +26,9 @@ background-color: #343a40;
 }
 
 #jumbotron-one{
-    background: url("../images/thetop.jpg");
-    background-size: cover;
+    background: rgba(0, 0, 0,0);
+    background-size: auto 100%;
     -webkit-background-size: cover;
-
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
@@ -36,7 +40,8 @@ background-color: #343a40;
 .info-box{
     height: auto;
     min-height: 200px;
-    margin: 0px 10px 20px 0px;
+    margin: 0px 10px 0 0px;
+    background-color: #222;
 }
 .skill-box{
 border-radius:10px;
@@ -67,8 +72,8 @@ margin:10px 20px 10px 20px;
 }
 .foot{
     color: #aaaaaa;
-    margin: 10px 0 10px 0;
-   
+    margin: 0px 0 0px 0;
+   min-height:40px;
 }
 
 .link-icon{
